# kfxai

./: .env.sample  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.yml  pyproject.toml
landing/: index.html  kfxai.html
public/: kfxai.php
scripts/: backtest.py  backtest_classic.py  backtest_session.py  blog_post.py  daily_fx_blog.py  deploy_dashboard.sh  deploy_landing.sh  post_blog.py
src/kfxai/: __init__.py  api.py  brain_api.py  config.py  database.py  engine.py  indicators.py  judgment.py  judgment_rule.py  models.py  oanda.py  predictor.py  predictor_gbm.py  research.py  strategies.py  strategy_session.py  worker.py
src/kfxai/static/: index.html
systemd/: kfxai-api.service  kfxai-blog.service  kfxai-blog.timer  kfxai-brain.service  kfxai-research.service  kfxai-research.timer  kfxai-worker.service
tests/: test_api.py  test_config.py  test_engine.py  test_oanda.py
